--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,33 @@
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailored Travel</title>
     <style>
-        #map { height: 600px; }
+        #map { height: 600px;
+        background-color: #ccc; }
     </style>
 </head>
+
 <body>
-    <div id="map"></div>
+    <div class="row" style="height:40px">
+        <form>
+            <select id="business">
+                <option value="restaurant">Restaurants</option>
+                <option value="coffee">Coffee Shops</option>
+                <option value="hotel">Hotels</option>
+                <option value="market">Markets</option>
+            </select>
+            <button id="submit">Submit</button>
+        </form>
+    </div>
+    
+    <div class="row" id="map"></div>
+    <div class="row" style=""
+    
 </body>
 </html>
